# libhoare

./: Cargo.toml  readme.md
src/: lib.rs
tests/: test_trivial.rs  test_with_methods.rs
